# wasmbin

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
benches/: bench.rs  depth.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: build_id.rs  dump.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  roundtrip.rs
src/: builtins.rs  indices.rs  instructions.rs  io.rs  lazy_mut.rs  lib.rs  module.rs  sections.rs  typed_module.rs  types.rs  visit.rs
src/builtins/: blob.rs  boolean.rs  collections.rs  floats.rs  integers.rs  lazy.rs  mod.rs  strings.rs
src/instructions/: misc.rs  mod.rs  simd.rs  threads.rs
tests/: spec.rs
