[package]
name = "wasmbin"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A self-generating WebAssembly parser and serializer"
repository = "https://github.com/GoogleChromeLabs/wasmbin"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]

[dependencies]
leb128 = "0.2.4"
thiserror = "1.0.9"
wasmbin-derive = { version = "0.1.0", path = "derive" }
custom_debug = "0.4.0"
once_cell = "1.3.1"
arbitrary = { version = "0.4.1", features = ["derive"] }

[features]
default = []
nightly = ["criterion/real_blackbox", "wasmbin-derive/nightly"]
proposals = ["tail-call", "simd", "reference-types", "threads"]
tail-call = []
bulk-memory-operations = []
simd = []
reference-types = ["bulk-memory-operations"]
threads = []

[dev-dependencies]
criterion = "0.3.1"
libtest-mimic = "0.3.0"
wast = "25.0.2"
fehler = "1.0.0"
anyhow = "1.0.31"
tempfile = "3.1.0"
rayon = "1.4.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]
