[package]
name = "wasmbin"
version = "0.3.1"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A self-generating WebAssembly parser and serializer"
repository = "https://github.com/GoogleChromeLabs/wasmbin"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]

exclude = [
    "tests/testsuite",
    "benches/fixture.wasm",
]

[dependencies]
leb128 = "0.2.4"
thiserror = "1.0.25"
wasmbin-derive = { version = "0.1.0", path = "derive" }
custom_debug = "0.5.0"
once_cell = "1.8.0"
arbitrary = { version = "1.0.1", features = ["derive"] }

[features]
default = []
nightly = ["criterion/real_blackbox", "wasmbin-derive/nightly"]
proposals = ["tail-call", "simd", "threads"]
tail-call = []
simd = []
threads = []

[dev-dependencies]
criterion = "0.3.4"
libtest-mimic = "0.3.0"
wast = "36.0.0"
fehler = "1.0.0"
anyhow = "1.0.41"
tempfile = "3.2.0"
structopt = "0.3.21"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]
