[package]
name = "wasmbin"
version = "0.5.1"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
resolver = "2"
license = "Apache-2.0"
description = "A self-generating WebAssembly parser and serializer"
repository = "https://github.com/GoogleChromeLabs/wasmbin"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]

exclude = [
    "tests/testsuite",
    "benches/fixture.wasm",
]

[dependencies]
leb128 = "0.2.5"
thiserror = "1.0.38"
wasmbin-derive = { version = "0.2.1", path = "derive" }
custom_debug = "0.5.0"
once_cell = "1.17.1"
arbitrary = { version = "1.2.3", features = ["derive"], optional = true }

[features]
default = []
proposals = ["exception-handling", "extended-name-section", "tail-call", "threads"]
exception-handling = []
extended-name-section = []
tail-call = []
threads = []
test = ["arbitrary", "wasmbin-derive/test"]

[dev-dependencies]
criterion = "0.4.0"
libtest-mimic = "0.6.0"
wast = "55.0.0"
fehler = "1.0.0"
anyhow = { version = "1.0.69", features = ["backtrace"] }
tempfile = "3.4.0"
structopt = "0.3.26"
indexmap = { version = "1.9.2", features = ["rayon"] }
rayon = "1.7.0"
wasmbin = { path = ".", features = ["test"] }
arbtest = "0.2.0"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]

[package.metadata.docs.rs]
features = ["proposals"]
