[package]
name = "wasmbin-derive"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synstructure = "0.12.3"
quote = "1.0.2"
proc-macro2 = "1.0.6"
syn = "1.0.11"
thiserror = "1.0.9"

[features]
nightly = []
